--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "fetch": "^1.1.0",
+    "json-file": "^0.1.0",
     "jsonfile": "^4.0.0",
     "morgan": "~1.9.0",
     "node-fetch": "^1.7.3",
