--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.9.0",
     "node-fetch": "^1.7.3",
     "pug": "2.0.0-beta11",
+    "querystring": "^0.2.0",
     "serve-favicon": "~2.4.5"
   }
 }
